clean up use jpl instead of proprietary logging follow ide advices